<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_track_perf_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Leistungsdaten eintragen"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="Vorname" />

                <EditText
                    android:id="@+id/txt_vorname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="Nachname" />

                <EditText
                    android:id="@+id/txt_nachname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Klasse" />

                <EditText
                    android:id="@+id/txt_klasse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Geschlecht" />

                <EditText
                    android:id="@+id/txt_geschlecht"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Geb.Datum" />

                <EditText
                    android:id="@+id/date_gebdatum"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txt_60m"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/lbl_60m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60m" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/stopwatch1"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="Stoppuhr"
                    android:textColor="@color/colorPrimaryDarkText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/txt_1000m"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/lbl_1000m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:text="1000m" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/stopwatch2"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="Stoppuhr"
                    android:textColor="@color/colorPrimaryDarkText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/txt_longjump"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789,"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/lbl_longjump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:text="Weitsprung" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/txt_kugel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789,"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/lbl_kugel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:text="Kugelstoßen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/txt_schlagball"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789,"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/lbl_schlagball"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:text="Schlagball" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/txt_all"
                    android:layout_width="100dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:textStyle="bold"
                    android:focusableInTouchMode="false"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/lbl_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:textStyle="bold"
                    android:text="Gesamt" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save_performance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="Speichern"
                android:textColor="@color/colorAccentText" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>


