...
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        />


</android.support.constraint.ConstraintLayout>
